# schedularr

./: .dockerignore  DEPLOYMENT.md  README.md  deploy.sh  docker-compose.yml
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/reddit/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
backend/reddit/api/: serializers.py  urls.py  views.py
backend/reddit/migrations/: 0001_initial.py  0002_scheduledpost_user_timezone.py  0003_alter_scheduledpost_cron_schedule.py  0004_submittedpost_reddit_account_submittedpost_selftext_and_more.py  0005_submittedpost_reddit_username.py
backend/scheduler/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/scheduler/migrations/: 0001_initial.py
backend/scheduler_project/: celery.py  settings.py  urls.py
backend/users/: serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
docker/: api.Dockerfile  beat.Dockerfile  nginx.Dockerfile  nginx.conf  web.Dockerfile  worker.Dockerfile
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx  AuthContextDefinition.tsx
frontend/src/hooks/: useAccountSelection.ts  useApiErrorHandler.ts  useAuth.ts
frontend/src/lib/: themes.ts
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  SignupPage.tsx
frontend/src/services/: accountStorage.ts  api.ts  errorHandling.ts  (+1 more)
(+8 files in other folders)
